--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.rootCategory=info, stdout, file, errorFile
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout=top.ybgnb.bilibili.backup.ui.log.PrintableAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=[%d{yy-MM-dd HH:mm:ss,SSS}] [%t] [%p] [%c{3} %M:%L] %m%n
 log4j.appender.stdout.layout.ConversionPattern= %m%n
