--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>bilibili-backup</artifactId>
     <name>哔哩哔哩账号备份</name>
     <description>一键对B站账号进行数据备份和还原，方便账号数据迁移/快速转生(哗哩哗哩 bilibili)</description>
-    <version>2.0</version>
+    <version>2.0.1</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -127,6 +127,8 @@
                         </goals>
                         <configuration>
                             <mainClass>${app.mainClass}</mainClass>
+<!--                            <displayName>${project.artifactId}</displayName>-->
+                            <name>${project.artifactId}</name>
                             <bundleJre>true</bundleJre>
                             <jrePath>jre</jrePath>
                             <generateInstaller>true</generateInstaller>
@@ -138,6 +140,7 @@
                             <organizationEmail>${app.email}</organizationEmail>
 
                             <winConfig>
+<!--                                <exeCreationTool>why</exeCreationTool>-->
                                 <exeCreationTool>winrun4j</exeCreationTool>
                                 <!-- https://github.com/kira-96/Inno-Setup-Chinese-Simplified-Translation -->
                                 <setupLanguages>
