--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,4 +2,6 @@ name=${project.name}
 description=${project.description}
 version=${project.version}
 author=${app.author}
-github=${app.github}
+url=${app.url}
+extend-infos=
+extend-urls=
