--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.svg</include>
+                </includes>
             </resource>
         </resources>
         <plugins>
@@ -172,41 +176,41 @@
                             </winConfig>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>without-jre</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>${app.mainClass}</mainClass>
-                            <displayName>${project.name}</displayName>
-                            <name>${project.artifactId}-without-jre</name>
-                            <bundleJre>false</bundleJre>
-                            <jreMinVersion>8</jreMinVersion>
-                            <generateInstaller>true</generateInstaller>
-                            <platform>windows</platform>
+<!--                    <execution>-->
+<!--                        <id>without-jre</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>package</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <mainClass>${app.mainClass}</mainClass>-->
+<!--                            <displayName>${project.name}</displayName>-->
+<!--                            <name>${project.artifactId}-without-jre</name>-->
+<!--                            <bundleJre>false</bundleJre>-->
+<!--                            <jreMinVersion>8</jreMinVersion>-->
+<!--                            <generateInstaller>true</generateInstaller>-->
+<!--                            <platform>windows</platform>-->
 
-                            <url>${app.url}</url>
-                            <organizationUrl>${app.url}</organizationUrl>
-                            <organizationName>${app.author}</organizationName>
-                            <organizationEmail>${app.email}</organizationEmail>
+<!--                            <url>${app.url}</url>-->
+<!--                            <organizationUrl>${app.url}</organizationUrl>-->
+<!--                            <organizationName>${app.author}</organizationName>-->
+<!--                            <organizationEmail>${app.email}</organizationEmail>-->
 
-                            <winConfig>
-                                <exeCreationTool>winrun4j</exeCreationTool>
-                                <icoFile>${app.ico}</icoFile>
-                                <!-- https://github.com/kira-96/Inno-Setup-Chinese-Simplified-Translation -->
-                                <setupLanguages>
-                                    <china>compiler:Languages\ChineseSimplified.isl</china>
-                                    <english>compiler:Default.isl</english>
-                                </setupLanguages>
-                                <generateMsi>false</generateMsi>
-                                <disableDirPage>false</disableDirPage>
-                                <disableFinishedPage>false</disableFinishedPage>
-                                <disableRunAfterInstall>false</disableRunAfterInstall>
-                            </winConfig>
-                        </configuration>
-                    </execution>
+<!--                            <winConfig>-->
+<!--                                <exeCreationTool>winrun4j</exeCreationTool>-->
+<!--                                <icoFile>${app.ico}</icoFile>-->
+<!--                                &lt;!&ndash; https://github.com/kira-96/Inno-Setup-Chinese-Simplified-Translation &ndash;&gt;-->
+<!--                                <setupLanguages>-->
+<!--                                    <china>compiler:Languages\ChineseSimplified.isl</china>-->
+<!--                                    <english>compiler:Default.isl</english>-->
+<!--                                </setupLanguages>-->
+<!--                                <generateMsi>false</generateMsi>-->
+<!--                                <disableDirPage>false</disableDirPage>-->
+<!--                                <disableFinishedPage>false</disableFinishedPage>-->
+<!--                                <disableRunAfterInstall>false</disableRunAfterInstall>-->
+<!--                            </winConfig>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
                 </executions>
             </plugin>
         </plugins>
