--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.hzhilong</groupId>
     <artifactId>bilibili-backup</artifactId>
     <name>哔哩哔哩账号备份</name>
-    <description>一键对B站账号进行数据备份和还原，方便账号数据迁移/快速转生(哗哩哗哩 bilibili)</description>
+    <description>一键对B站账号进行数据备份和还原，方便账号数据迁移/快速转生(哔哩哔哩 bilibili)</description>
     <version>2.0.9</version>
 
     <properties>
