取消备份关注时的分段处理功能； 备份和还原关注时支持手动选择关注分组； 更新获取关注的接口，分页数量为200（备份更快了，不用再分段处理了。还原时检测现有数据也更快了）；

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
         <flatlaf.version>3.5.2</flatlaf.version>
         <ybgnb-base.version>0.0.2</ybgnb-base.version>
-        <ybgnb-base-app.version>0.0.6-SNAPSHOT</ybgnb-base-app.version>
+        <ybgnb-base-app.version>0.0.6</ybgnb-base-app.version>
         <javapackager.jrePath>D:\Java\jdk1.8.0_201\jre</javapackager.jrePath>
     </properties>
 
