--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>bilibili-backup</artifactId>
     <name>哔哩哔哩账号备份</name>
     <description>一键对B站账号进行数据备份和还原，方便账号数据迁移/快速转生(哔哩哔哩 bilibili)</description>
-    <version>2.1.3</version>
+    <version>2.1.4</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -193,7 +193,7 @@
                             </winConfig>
                         </configuration>
                     </execution>
-                    <execution>
+                   <!-- <execution>
                         <id>bundle-jre-x86</id>
                         <phase>package</phase>
                         <goals>
@@ -217,7 +217,7 @@
                             <winConfig>
                                 <exeCreationTool>winrun4j</exeCreationTool>
                                 <icoFile>${app.ico}</icoFile>
-                                <!-- https://github.com/kira-96/Inno-Setup-Chinese-Simplified-Translation -->
+                                &lt;!&ndash; https://github.com/kira-96/Inno-Setup-Chinese-Simplified-Translation &ndash;&gt;
                                 <setupLanguages>
                                     <china>compiler:Languages\ChineseSimplified.isl</china>
                                     <english>compiler:Default.isl</english>
@@ -228,7 +228,7 @@
                                 <disableRunAfterInstall>false</disableRunAfterInstall>
                             </winConfig>
                         </configuration>
-                    </execution>
+                    </execution>-->
                     <execution>
                         <id>without-jre</id>
                         <phase>package</phase>
